Find and replace a string in file using BufferedReader